# TensorRT_10_inference

./: README.md  TRT_10_PATH.sh  compare.py  yolov8-run-tensorrt-inference-README-hwl.txt
code/includes/: PlateUS.h  ResnetAgender.h  build.h  classification.h  common.h  feature.h  model.h  postprocess.h  preprocess.h  resnet.h  yolov5_cu.h  yolov8Pose.h
code/src/: PlateUS.cpp  ResnetAgender.cpp  build.cpp  classification.cpp  detection.cpp  feature.cpp  model.cpp  postprocess.cu  preprocess.cu  resnet.cpp  yolov5_cu.cpp  yolov8.cpp  yolov8Pose.cpp
configs/CenterFace/: config.yaml  config_b.yaml
configs/PlateUS/: config.yaml
configs/ResnetAgender/: config.yaml
configs/fast-reid/: config.yaml
configs/labels/: Agender.names  BVP.names  PlateUS.names  V_colors.names  V_type.names
configs/resnet/: configs_r18_color.yaml  configs_r18_type.yaml
configs/yolov5_cu/: config.yaml
configs/yolov8/: config-pose.yaml  config.yaml
configs/yolov8Pose/: config-pose.yaml
depends/yaml-cpp-master/: CMakeLists.txt
project/: CMakeLists.txt  CMakeLists_8_x.txt  build_project.sh  main.cpp
project/CenterFace/: byte_tracker.py  inference.py  inference_jx.py  matching.py
project/PlateUS/: CMakeLists.txt  README.md  infer_onnx.py
project/ResnetAgender/: CMakeLists.txt  README.md  export_onnx.py  infer_onnx.py
project/ResnetAgender/net/: .___init__.py  ._models.py  ._utils.py  models.py  utils.py
project/lprnet/: CMakeLists.txt
project/resnet/: CMakeLists.txt  README.md  export_infer_vehicle_color.py  export_infer_vehicle_type.py
project/yolov8Pose/: CMakeLists.txt
